[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-react-select"
version = "0.0.1"
description = "Reflex custom component react-select"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "", email = "bert.barabas@outlook.com" }]
keywords = ["reflex","reflex-custom-components"]

dependencies = ["reflex>=0.7.8"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]

[project.optional-dependencies]
dev = ["build", "twine"]

[tool.setuptools.packages.find]
where = ["custom_components"]